# tutorial_yarp-rpc

./: .gitignore  CMakeLists.txt  README.md
src/: rpc-client.cpp  rpc-server.cpp
